factoring of code for Submit/Reset in control frames Bug 65747 r=pollmann sr=attinasi