layout/forms/nsFormControlHelper.cpp
@@ -933,3 +933,67 @@ nsFormControlHelper::GetDisabled(nsIContent* aContent, PRBool* oIsDisabled)
   }
   return NS_OK;
 }
+
+// manual submission helper method
+// aPresShell        - If the PresShell is null then the PresContext will 
+//                     get its own and use itstatic nsresult
+// aFormFrame        - The HTML Form's frame
+// aFormControlFrame - The form controls frame that is calling this
+//                     it can be null
+// aDoSubmit         - Submit = TRUE, Reset = FALSE
+// Indicates whether to do DOM Processing of the event or to do regular frame processing
+nsresult
+nsFormControlHelper::DoManualSubmitOrReset(nsIPresContext* aPresContext,
+                                           nsIPresShell*   aPresShell,
+                                           nsIFrame*       aFormFrame, 
+                                           nsIFrame*       aFormControlFrame,
+                                           PRBool          aDoSubmit,
+                                           PRBool          aDoDOMEvent) 
+{
+  NS_ENSURE_ARG_POINTER(aPresContext);
+  NS_ENSURE_ARG_POINTER(aFormFrame);
+
+  nsresult result = NS_OK;
+
+  nsCOMPtr<nsIContent> formContent;
+  aFormFrame->GetContent(getter_AddRefs(formContent));
+
+  nsEventStatus status = nsEventStatus_eIgnore;
+  if (formContent) {
+    //Either use the PresShell passed in or go get it from the PresContext
+    nsCOMPtr<nsIPresShell> shell; // this will do our clean up
+    if (aPresShell == nsnull) {
+      result = aPresContext->GetShell(getter_AddRefs(shell));
+      aPresShell = shell.get(); // not AddRefing because shell will clean up
+    }
+
+    // With a valid PreShell handle the event
+    if (NS_SUCCEEDED(result) && nsnull != aPresShell) {
+      nsEvent event;
+      event.eventStructType = NS_EVENT;
+      event.message         = aDoSubmit?NS_FORM_SUBMIT:NS_FORM_RESET;
+      if (aDoDOMEvent) {
+        aPresShell->HandleDOMEventWithTarget(formContent, &event, &status);
+      } else {
+        aPresShell->HandleEventWithTarget(&event, nsnull, formContent, NS_EVENT_FLAG_INIT, &status);
+      }
+    }
+  }
+
+  // Check status after handling event to make sure we should continue
+  if (nsEventStatus_eConsumeNoDefault != status) {
+    // get the form manager interface
+    nsIFormManager* formMan = nsnull; // weak reference, not refcounted
+    result = aFormFrame->QueryInterface(NS_GET_IID(nsIFormManager), (void**)&formMan);
+    if (NS_SUCCEEDED(result) && formMan) {
+      // now do the Submit or Reset
+      if (aDoSubmit) {
+        formMan->OnSubmit(aPresContext, aFormControlFrame);
+      } else {
+        formMan->OnReset(aPresContext);
+      }
+    }
+  }
+  return result;
+}
+
